opam-version: "2.0"

depends: [
  "rocq-runtime" { (>= "9.1" & < "9.2~") | (= "dev") }
  "rocq-stdlib"
  "rocq-stdpp"
  "rocq-iris"
]

pin-depends: [
  ["rocq-stdpp.dev"          "git+https://gitlab.mpi-sws.org/iris/stdpp#187909f0c15b7c8"]
  ["rocq-iris.dev"           "git+https://gitlab.mpi-sws.org/iris/iris#fde0f86992"]
]
